; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_policy.c_ErrorIfUnsupportedPolicy.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_policy.c_ErrorIfUnsupportedPolicy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@ERRCODE_FEATURE_NOT_SUPPORTED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [70 x i8] c"policies on distributed tables are only supported in Citus Enterprise\00", align 1
@.str.1 = private unnamed_addr constant [51 x i8] c"Remove any policies on a table before distributing\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ErrorIfUnsupportedPolicy(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i64 @relation_has_policies(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i32, i32* @ERROR, align 4
  %8 = load i32, i32* @ERRCODE_FEATURE_NOT_SUPPORTED, align 4
  %9 = call i32 @errcode(i32 %8)
  %10 = call i32 @errmsg(i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @errhint(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0))
  %12 = call i32 @ereport(i32 %7, i32 %11)
  br label %13

13:                                               ; preds = %6, %1
  ret void
}

declare dso_local i64 @relation_has_policies(i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32 @errhint(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
